2017-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-595

	* src/m_disort.cc (DisortCalc): Missed to adopt the dummy
	declaration of the function.

2017-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-594

	* controlfiles/artscomponents/disort/TestDISORT.arts:
	surface_skin_t now set, by extract from t_field.

	* src/m_disort.cc (DisortCalc): Now takes surface_skin_t as input.
	Replaces using t_field(0,0,0).

	* src/m_surface.cc (surfaceLambertianSimple): Removed the
	limitation to 1D. But 2D and 3D are only handled in a simplistic
	manner.

	(surface_scalar_reflectivityFromSurface_rmatrix): New WSM.

	* controlfiles/general/agendas_surface_sub.arts: Removed
	unnecessary Ignore calls

	* src/workspace.cc: Small changes in doc of rtp_pos/los.

2017-01-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* arts-2-3-593

	* Note: atmosphere_dim must be set before calling abs_lookupSetupBatch!

	* src/m_abs_lookup.cc (abs_lookupSetupBatch):

	Perform a full atmfields_checkedCalc() on the given
	batch_atm_fields_compact. This closes a loophole when only
	calculating a lookup table.

	* src/methods.cc (abs_lookupSetupBatch):

	Updated the documentation to include the performed atmfield check.

	The more sophisticated checks require atmosphere_dim as an additional input
	parameter for the method.

	* controlfiles/instruments/amsu/TestAMSU_MetMM_generic.arts,
	controlfiles/instruments/amsu/TestAMSU_generic.arts,
	controlfiles/instruments/hirs/TestHIRS.arts,
	controlfiles/instruments/mhs/TestMHS_generic.arts,
	controlfiles/instruments/mviri/TestMVIRI.arts,
	controlfiles/instruments/seviri/TestSEVIRI.arts:

	Removed comments showing outdated abs_lookupSetupBatch syntax.

2017-01-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-592

	* src/m_oem.cc (inversion_iterate_agendaCall): Removed. This was a
	fix to the bug just removed.

	* src/m_surface.cc (FastemStandAlone): Frequency fix implemented here.
