@@ -6741,7 +6741,7 @@ void define_md_data_raw()
         GOUT(),
         GOUT_TYPE(),
         GOUT_DESC(),
-        IN( "diy_dx", "f_grid", "atmosphere_dim", "p_grid", "lat_grid",
+        IN( "diy_dx", "iy_id", "f_grid", "atmosphere_dim", "p_grid", "lat_grid",
             "lon_grid", "lat_true", "lon_true", "t_field", "z_field",
             "vmr_field", "t_nlte_field", "wind_u_field", "wind_v_field",
             "wind_w_field", "mag_u_field", "mag_v_field", "mag_w_field",
@@ -10361,7 +10361,7 @@ void define_md_data_raw()
         GOUT(),
         GOUT_TYPE(),
         GOUT_DESC(),
-        IN( "scat_data", "cloudbox_limits" ),
+        IN( "scat_data", "atmosphere_dim", "cloudbox_limits" ),
         GIN(),
         GIN_TYPE(),
         GIN_DEFAULT(),
