@@ -1,5 +1,16 @@
 2017-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-596
+
+	* src/m_cloudbox.cc (pnd_fieldZero): Now considers atmosphere_dim
+	and checks that cloudbox_limits have the correct length. And now
+	also handles 2D.
+
+	* src/m_rte.cc (iyIndependentBeamApproximation): Now picks up and
+	passes on iy_id.
+
+2017-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-595
 
 	* src/m_disort.cc (DisortCalc): Missed to adopt the dummy
